--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=path
+spring.application.name=${SERVICE_ID:example-service}
 spring.profiles.active=${PROFILE:dev}
 server.port=${PORT:8080}
 
@@ -10,16 +10,6 @@ spring.r2dbc.username=${DB_USERNAME:postgres}
 spring.r2dbc.password=${DB_PASSWORD:password}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-#OTHER FOR DB (We are using mysql pooling to avoid many connections)
-#spring.r2dbc.pool.initial-size=100
-#spring.r2dbc.pool.max-size=500
-#spring.r2dbc.pool.max-idle-time=30m
-#spring.r2dbc.pool.validation-query=SELECT 1
-
-#spring.sql.init.platform=mysql
-#spring.sql.init.mode=always
-#spring.sql.init.schema-locations=classpath:schema.sql
-
 spring.flyway.url=jdbc:postgresql://${DB_URL:localhost}:${DB_PORT:5432}/${DB_NAME:test}
 spring.flyway.user=${DB_USERNAME:postgres}
 spring.flyway.password=${DB_PASSWORD:password}
@@ -27,12 +17,18 @@ spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
 spring.flyway.baseline-on-migrate=true
 
+# Enable detailed WebFlux logging
+logging.level.org.springframework.web.reactive=DEBUG
+logging.level.org.springframework.web.server.adapter.HttpWebHandlerAdapter=DEBUG
+# Enable Reactor Netty logging (if using Reactor Netty)
+logging.level.reactor.netty=DEBUG
+
 logging.level.org.springframework.r2dbc.core=DEBUG
 logging.level.org.springframework.data.r2dbc.core=DEBUG
 logging.level.org.springframework.r2dbc=DEBUG
 logging.level.io.r2dbc.postgresql=DEBUG
 logging.level.io.r2dbc.spi=DEBUG
-logging.pattern.console=%clr(%d{${LOG_DATEFORMAT_PATTERN:-yyyy-MM-dd HH:mm:ss.SSS}}){faint} %clr(${LOG_LEVEL_PATTERN:-%5p}) %clr(${PID:- }){magenta} %clr([%15.15t]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %clr([%X{requestId}]){yellow} %m%n
+logging.pattern.console=%clr(%d{${LOG_DATEFORMAT_PATTERN:yyyy-MM-dd HH:mm:ss.SSS}}){faint} %clr(${LOG_LEVEL_PATTERN:-%5p}) %clr(${PID:- }){magenta} %clr([%15.15t]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %clr([%X{requestId}]){yellow} %m%n
 
 springdoc.swagger-ui.path=/documentation
 springdoc.show-actuator=true
